2007-05-16  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (image creation): Adjust image line pad according to
	image data width in XCreateImage().  Bug #1716389.

2007-05-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (image creation): Add an error check for allocation of
	storage via XCreateImage().

2007-05-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_set_key_title): When a key title is loaded
	from a datafile columnheader, apply or don't apply enhanced text
	processing based on the setting of "set key {no}enhanced".
	Bug #1712560

	* demo/histograms.dem demo/histograms2.dem: This change affects the
	histogram demo, because some column headers contain an underscore.
	Add an explicit "set key noenhanced".

2007-05-14  Timothee Lecomte  <timothee.lecomte@ens.fr>

        * src/command.c (fgets_ipc): Fix fgets_ipc so that it behaves like
        fgets (always NUL-terminate the returned string).
        Bugs #1716556 and #1673352

2007-05-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.dj2 config/makefile.dj2: Updated Makefile for djgpp
	using a config.h file.

2007-05-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h src/variable.c src/variable.h
	src/command.c:  Move numeric_locale from variable.c to util.c.

	* src/fit.c (fit_command) src/plot2d.c (get_data)
	src/plot3d.c (get_3ddata) src/datafile.c (df_reset_after_error):
	Apply user-specified numeric locale just before any data is read in from
	a data file.  Reset it to "C" afterwards.
	Bugs #1692541 #1707916

2007-05-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.d (ifilled_quadrangle): Initialize line style before
	setting color.  Bug #1715480

	* src/misc.c (lp_use_properties): Pay attention to the point flag
	even if we fall through to a default line type. Bug #1715480

2007-05-07  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: If the user specifies ./configure --with-plot but