@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot.c,v 1.92 2007/02/09 23:30:04 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot.c,v 1.93 2007/05/16 20:20:12 tlecomte Exp $"); }
 #endif
 
 /* GNUPLOT - plot.c */
@@ -596,6 +596,13 @@ main(int argc, char **argv)
 	/* come back here from int_error() */
 	if (interactive == FALSE)
 	    exit_status = EXIT_FAILURE;
+#ifdef HAVE_LIBREADLINE
+	else
+	{
+	    /* reset properly readline after a SIGINT+longjmp */
+	    rl_reset_after_signal ();
+	}
+#endif
 
 #ifdef AMIGA_SC_6_1
 	(void) rawcon(0);
